--- a/css/style.css
+++ b/css/style.css
@@ -472,3 +472,62 @@ contact start
 /* =============
 contact end
 ================ */
+/* =============
+Footer straert
+================ */
+
+.footer {
+  background: #00413D;
+  padding: 80px 0px;
+  margin-top: 80px;
+  text-align: center;
+
+}
+.footer .ulOne{
+  padding: 40px 0px;
+}
+
+.footer .ulOne ul li{
+  font-size: 18px;
+
+  font-weight: 500;
+  color: #fff;
+  font-family: "Jost", sans-serif;
+  border-right: 2px solid rgba(255, 255, 255,0.10);
+  padding-right: 33px;
+
+}
+.footer .ulOne ul .lastLI{
+  border-right: 0;
+
+}
+.footer .ulTwo ul li{
+ 
+}
+.footer .ulTwo ul li i{
+  color: white;
+  background: #E5745D;
+  padding: 20px;
+  border-radius: 50%;
+  font-size: 24px;
+  
+
+}
+.copy{
+  background: #00413D;
+  padding: 80px 0px;
+  text-align: center;
+}
+
+.copy p{
+  border-top: 1px solid rgba(245, 245, 245,0.10);
+  width: 1400px;
+  margin: 0 auto;
+  color: rgba(245, 245, 245,0.10);
+  padding-top: 20px;
+  
+
+}
+/* =============
+Footer end
+================ */
